apps/production/ofgs-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: prod
  name: ofgs-api-service
spec:
  selector:
    app: ofgs-api
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
